# InCC-Compiler-ARM64

./: LICENSE  code.tx  compile  compiler.py  compiler.py.bak  compiler.py.bak2.py  configs.py  helper_compiler.py  pyproject.toml  todo.txt  virt_mama.txt
code/: a.incc  assign_multi.incc  compare.incc  cond.incc  cond2.incc  if_then_else.incc  if_then_else_0.incc  load_multi_var.incc  load_var.incc  mul.incc  multi_var.incc  print_stack.incc  proc0.incc  proc1.incc  seq.incc  seq_multi.incc  while.incc  while2.incc
helper/: file_loader.py  load.py  nvim_py.py
helper/c/: a.out  printf  printf.c  printf.s
incc/compiler/cma/: arm64_helper.py  enum_ast.py  gen_arm.py  gen_ir.py  helper.py
incc/compiler/cma/bak/: arith_expr.py.bak  arm_1.py.bak  arm_64.py.bak  arm_64.py.bak2  x86_64.py.bak
incc/interpreter/: arith_expr.py
incc/language/: lexing.py  parser.out  parsetab.py  parsing.py  precedence.py
incc/language/helper/: lexing_helper.py
incc/language/lexer/: arith_expr.py  bak.full_lexer.py  compare.py  controllflow_expr.py  print_expr.py  proc_lexer.py  sequences.py
incc/language/parser/: code_generation.py  error_handling.py
