[project]
name = "arm"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Dominik Ocsofszki", email = "dominikocsofszki@gmail.com"},
]
dependencies = ["ply>=3.11", "icecream>=2.1.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
